added integration tests

--- a/Backend-ProyectoWeb/src/main/resources/application.properties
+++ b/Backend-ProyectoWeb/src/main/resources/application.properties
@@ -1,15 +1,27 @@
-# Server properties
-server.port=8080
-
-# H2 properties
+#---
+spring.config.activate.on-profile=devel
 spring.jpa.database=h2
-spring.datasource.url=jdbc:h2:file:./mydatabase
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./develdb
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-
-# H2 console properties
+spring.jpa.generate-ddl=true                
+spring.jpa.hibernate.ddl-auto=create-drop   
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+#---
+spring.config.activate.on-profile=integrationtest
+spring.jpa.database=h2
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.generate-ddl=true    
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
