--- a/Backend-ProyectoWeb/src/main/resources/application.properties
+++ b/Backend-ProyectoWeb/src/main/resources/application.properties
@@ -25,3 +25,16 @@ spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+
+#---
+spring.config.activate.on-profile=systemtest
+spring.jpa.database=h2
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.generate-ddl=true                
+spring.jpa.hibernate.ddl-auto=create-drop   
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+server.port=8080
