--- a/Backend-ProyectoWeb/src/main/resources/application.properties
+++ b/Backend-ProyectoWeb/src/main/resources/application.properties
@@ -24,6 +24,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #---
 spring.config.activate.on-profile=integrationtest
+security.enabled=false
 keycloak.enabled=false
 spring.jpa.database=h2
 spring.datasource.driver-class-name=org.h2.Driver
@@ -38,6 +39,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #---
 spring.config.activate.on-profile=systemtest
+security.enabled=false
 keycloak.enabled=false
 spring.jpa.database=h2
 spring.datasource.driver-class-name=org.h2.Driver
