--- a/Backend-ProyectoWeb/pom.xml
+++ b/Backend-ProyectoWeb/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>org.web.project</groupId>
 	<artifactId>proyectoweb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>proyectoweb</name>
 	<description>Proyecto Desarrollo Web</description>
 	<properties>
